# Recubin

./: .gitignore  .luaurc  AGENTS.md  CLAUDE.md  CLEARCOLOR_BUG.md  CMakeLists.txt  RCBN.luah  TODO.md  brun.bat  build.bat  build.py  clean.bat  imgui.ini  issues.md  output.txt  readme.md  run.bat  spec.md  violations.md  watchSnake.py
.claude/: settings.local.json
assets/scenes/: _snapshot.yaml  signal_test.yaml  test_bindings.yaml  test_motor.yaml  test_rod.yaml  test_rope.yaml  test_scene.yaml  test_weld.yaml  test_weld_chain.yaml  void.yaml
doc/: LPL.md  README.md
doc/Core/: AudioService.md  FileLoader.md  LuauEngine.md  Physics.md  README.md  Renderer.md  SceneLoader.md  SystemState.md  User.md
doc/Editor/: CommandHistory.md  ConsolePanel.md  ContentBrowserPanel.md  EditorManager.md  EditorPanel.md  PropertiesPanel.md  README.md  SceneHierarchyPanel.md  ViewportFocusManager.md  ViewportPanel.md
doc/Instances/: BaseCube.md  Cube.md  Decal.md  Instance.md  Model.md  README.md  Script.md  Sound.md  Spatial.md  Workspace.md
doc/Math/: CFrame.md  Matrix4.md  Quaternion.md  README.md  Vector3.md
doc/Util/: Color4.md  Logger.md  Material.md  README.md
include/Core/: 1_src_Core.lnk  AudioService.hpp  FileLoader.hpp  LuarCompiler.hpp  LuauEngine.hpp  Packager.hpp  Physics.hpp  RCBNScriptSignal.hpp  Renderer.hpp  SceneLoader.hpp  SystemState.hpp  Terrain.hpp  TerrainStreamer.hpp  User.hpp
include/Editor/: CommandHistory.hpp  ConsolePanel.hpp  ContentBrowserPanel.hpp  EditorManager.hpp  EditorPanel.hpp  IEditorManager.hpp  NullEditorManager.hpp  PropertiesPanel.hpp  SceneHierarchyPanel.hpp  SecondaryViewportPanel.hpp  SpawnUtil.hpp  ViewportFocusManager.hpp  ViewportPanel.hpp
include/Instances/: AppImage.hpp  BaseCube.hpp  BillboardGui.hpp  CharacterSetting.hpp  Cube.hpp  Cylinder.hpp  Decal.hpp  Event.hpp  Folder.hpp  GuiButton.hpp  Instance.hpp  Lighting.hpp  Model.hpp  Motor.hpp  ProximityPrompt.hpp  Rod.hpp  Rope.hpp  ScreenGuiObject.hpp  Script.hpp  Skybox.hpp  Sound.hpp  Spatial.hpp  Sphere.hpp  SurfaceGui.hpp  System.hpp  TextButton.hpp  TextLabel.hpp  Texture.hpp  Tool.hpp  TriangularPrism.hpp  Weld.hpp  Workspace.hpp  WorldGuiObject.hpp
include/Math/: CFrame.hpp  Matrix4.hpp  PerlinNoise.hpp  Quaternion.hpp  Vector2.hpp  Vector3.hpp
include/Util/: Color4.hpp  Logger.hpp  Material.hpp
include/imgui/: ImGuizmo.h
include/libs/: LowLevelAABB_static_64.lib  Luau.Ast.lib  Luau.Common.lib  Luau.VM.lib  PVDRuntime_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.lib  PhysXCooking_64.lib  PhysXFoundation_64.lib  PhysXTask_static_64.lib  PhysXVehicle2_static_64.lib  PhysX_64.lib  SceneQuery_static_64.lib  SnippetRender_static_64.lib  SnippetUtils_static_64.lib
include/yaml-cpp/: dll.h
launcher/: main.cpp
logs/: motor.txt  rod.txt  rope.txt  weld.txt
plans/: terrain.md
reports/: walkthrough.md
scripts/: 2006.luau  HelloLuar.luar  Prox.luau  hello.luau  signal_test.luau  test.luau  test_bindings.luau
src/: BaseCube.cpp  Cube.cpp  Physics.cpp  Render.cpp  User.cpp  archive.md  fragment.glsl  game_main.cpp  main.cpp  skybox_vertex.glsl  vertex.glsl
src/Core/: 1_include_Core.lnk  AudioService.cpp  FileLoader.cpp  LuarCompiler.cpp  LuauEngine.cpp  LuauEngine_Dispatch.cpp  LuauEngine_Math.cpp  Packager.cpp  Physics.cpp  RCBNScriptSignal.cpp  Render.cpp  Renderer.cpp  Renderer_GUI.cpp  SceneLoader.cpp  SystemState.cpp  Terrain.cpp  TerrainStreamer.cpp  User.cpp
src/Editor/: CommandHistory.cpp  ConsolePanel.cpp  ContentBrowserPanel.cpp  EditorManager.cpp  PropertiesPanel.cpp  SceneHierarchyPanel.cpp  SecondaryViewportPanel.cpp  ViewportFocusManager.cpp  ViewportPanel.cpp
src/Instances/: AppImage.cpp  BaseCube.cpp  BillboardGui.cpp  CharacterSetting.cpp  Cube.cpp  Cylinder.cpp  Decal.cpp  Event.cpp  GuiButton.cpp  Instance.cpp  Lighting.cpp  Motor.cpp  ProximityPrompt.cpp  Rod.cpp  Rope.cpp  ScreenGuiObject.cpp  Script.cpp  Skybox.cpp  Sound.cpp  Spatial.cpp  Sphere.cpp  SurfaceGui.cpp  System.cpp  TextButton.cpp  TextLabel.cpp  Texture.cpp  Tool.cpp  TriangularPrism.cpp  Weld.cpp  Workspace.cpp  WorldGuiObject.cpp
src/imgui/: ImGuizmo.cpp
temp_build/deps_md/build_freeglut/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  freeglut.pc  freeglut.slnx  freeglut.vcxproj  freeglut.vcxproj.filters
temp_build/deps_md/build_glew/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glew.slnx  glewinfo.vcxproj  glewinfo.vcxproj.filters  libglew_static.vcxproj  libglew_static.vcxproj.filters  visualinfo.vcxproj  visualinfo.vcxproj.filters
temp_build/deps_md/build_glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLFW.slnx  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
temp_build/deps_md/build_luau/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Luau.Analysis.vcxproj  Luau.Analysis.vcxproj.filters  Luau.Ast.vcxproj  Luau.Ast.vcxproj.filters  Luau.Bytecode.vcxproj  Luau.Bytecode.vcxproj.filters  Luau.CLI.lib.vcxproj  Luau.CLI.lib.vcxproj.filters  Luau.CodeGen.vcxproj  Luau.CodeGen.vcxproj.filters  Luau.Common.vcxproj  Luau.Common.vcxproj.filters  Luau.Compiler.vcxproj  Luau.Compiler.vcxproj.filters  Luau.Config.vcxproj  (+11 more)
(+739 files in other folders)
